# MachineLearning

./: .gitignore  README.md  pyproject.toml
Lab1/: README.md  app.py  report.md
Lab1/models/: hyperparams.json  mappings.pkl
Lab2/: README.md  lab2_machine_learning.ipynb
